--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
+    "@tabler/icons-react": "^3.6.0",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
-  },
-  "devDependencies": {
+    "react-hook-form": "^7.52.0",
+    "react-hot-toast": "^2.4.1",
+    "zod": "^3.23.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "eslint": "^8.57.0",
