--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,14 +12,13 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
+    "plugins": [{
+      "name": "next"
+    }],
     "paths": {
       "~components/*": ["./app/components/*"],
-      "~ui/*": ["./app/components/ui/*"]
+      "~ui/*": ["./app/components/ui/*"],
+      "~types/*": ["./types/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
